# Robot_Software

./: .gitignore  LICENSE  README.md
aubo_ws/: .ycm_extra_conf.py  move_it_setup_assistant.sh  program.sh  real.sh  sim.sh
aubo_ws/devel/: .catkin  .rosinstall  setup.sh
aubo_ws/devel/include/ar_publisher/: ARMarker.h
aubo_ws/devel/include/aubo_msgs/: Analog.h  Digital.h  GoalPoint.h  IOState.h  JointPos.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  TraPoint.h
aubo_ws/devel/include/coordination_publisher/: coordination.h
aubo_ws/devel/include/moving_core/: LocalizePart.h  LocalizePartRequest.h  LocalizePartResponse.h  PoseMessage.h
aubo_ws/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
aubo_ws/devel/lib/ar_publisher/: ar_publisher_node
aubo_ws/devel/lib/aubo_controller/: aubo_joint_trajectory_action
aubo_ws/devel/lib/aubo_demo/: move_group_interface_tutorial
aubo_ws/devel/lib/aubo_driver/: aubo_driver  testAuboAPI  testIO
aubo_ws/devel/lib/aubo_planner/: aubo_planner_test
aubo_ws/devel/lib/coordination_publisher/: coordination_node_pub  coordination_node_sub
aubo_ws/devel/lib/moving_core/: move  moving_node  vision_node
aubo_ws/devel/lib/pkgconfig/: ar_publisher.pc  aubo_controller.pc  aubo_demo.pc  aubo_description.pc  aubo_driver.pc  aubo_i3_moveit_config.pc  aubo_i5_moveit_config.pc  aubo_i5l_moveit_config.pc  aubo_i7_moveit_config.pc  aubo_msgs.pc  aubo_planner.pc  coordination_publisher.pc  descartes_core.pc  descartes_moveit.pc  descartes_planner.pc  descartes_tests.pc  descartes_trajectory.pc  descartes_utilities.pc  moving_core.pc  moving_moveit_config.pc  moving_support.pc  plan_and_run.pc  ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_demo_descartes.pc  ur5_demo_moveit_config.pc  ur5_demo_support.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
aubo_ws/devel/lib/plan_and_run/: plan_and_run_node
aubo_ws/src/aubo_i5_config/: .setup_assistant  package.xml
aubo_ws/src/aubo_i5_config/config/: ros_controllers.yaml
aubo_ws/src/aubo_i5_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
aubo_ws/src/aubo_i5_demo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_ws/src/aubo_i5_demo_moveit_config/config/: aubo_i5.srdf  controllers.yaml  joint_limits.yaml  ompl_planning.yaml
aubo_ws/src/aubo_i5_demo_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aubo_ws/src/aubo_i5_support/: package.xml
aubo_ws/src/aubo_i5_support/Launch/: urdf.launch
aubo_ws/src/aubo_i5_support/urdf/: aubo_i5.urdf  aubo_i5.urdf.xacro
aubo_ws/src/aubo_it_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_ws/src/aubo_it_config/config/: aubo_i5.srdf  ros_controllers.yaml
aubo_ws/src/aubo_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aubo_ws/src/coordination_publisher/msg/: coordination.msg
aubo_ws/src/moving_core/src/: descartes_move.cpp
aubo_ws/src/moving_core/srv/: PlanCartesianPath.srv
aubo_ws/src/moving_moveit_config/launch/: .setup_assistant  demo.launch  move_group.launch  moveit_rviz.launch  myworkcell_moveit_controller_manager.launch.xml  myworkcell_planning_execution.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
aubo_ws/src/moving_support/: CMakeLists.txt
aubo_ws/src/plan_and_run/launch/: aubo_setup.launch
aubo_ws/src/plan_and_run/src/: demo_application.cpp
b_ws/: .ycm_extra_conf.py
b_ws/src/ar_publisher/src/: ar_publisher.cpp
b_ws/src/aubo_i5_config/: .setup_assistant  CMakeLists.txt  package.xml
b_ws/src/aubo_i5_config/config/: aubo_i5_robot.srdf  (+2 more)
b_ws/src/moving_core/: CMakeLists.txt
b_ws/src/moving_core/src/: descartes_move.cpp  moving_node.cpp  vision_node.cpp
b_ws/src/moving_moveit_config/: CMakeLists.txt  package.xml
b_ws/src/ur5_demo_descartes/: CMakeLists.txt
b_ws/src/ur5_demo_support/: CMakeLists.txt
c_ws/: .ycm_extra_conf.py  demo.sh  gripper.sh  move.sh  real.sh  tcp.sh
c_ws/src/aubo_i5_config/: .setup_assistant
c_ws/src/aubo_i5_support/: CMakeLists.txt
c_ws/src/aubo_move/: CMakeLists.txt  README.md  package.xml
c_ws/src/aubo_move/launch/: move.launch  move_group_interface_tutorial.launch
c_ws/src/aubo_move/scripts/: move.py
c_ws/src/aubo_move/src/: move.cpp  move2.cpp  move_group_interface_tutorial.cpp  pose1.cpp  pose2.cpp  pose3.cpp  pose4.cpp  pose5.cpp
c_ws/src/gui_server/: CMakeLists.txt  package.xml
c_ws/src/raspberry_server/: CMakeLists.txt  package.xml
catkin_ws/: .ycm_extra_conf.py  program.sh  real.sh  sim.sh  viz.sh
catkin_ws/src/ar_publisher/: CMakeLists.txt
catkin_ws/src/aubo_moveit_config/: CMakeLists.txt  package.xml
catkin_ws/src/aubo_ur5_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/coordination_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/coordination_publisher/src/: coordination_node_pub.cpp
catkin_ws/src/moving_core/: package.xml
catkin_ws/src/moving_core/src/: descartes_move.cpp
(+181 files in other folders)
