<?xml version="1.0"?>
<package format="2">
  <name>moving_core</name>
  <version>0.1.0</version>
  <description>moving_core</description>
  <maintainer email="a@a.com">Ali Ammar</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/descartes/</url>
  <author email="a@a.com">Ali Ammar</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>ar_publisher</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>ur5_demo_descartes</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roslib</depend>
  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>descartes_planner</depend>
  <depend>descartes_trajectory</depend>
  <depend>descartes_utilities</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
</package>
